--- a/dotfiles/.config/waybar/style.css
+++ b/dotfiles/.config/waybar/style.css
@@ -56,7 +56,7 @@ window#waybar.hidden {
 
 #custom-power {
   margin-right: 6px;
-  font-size: 18px;
+  /*font-size: 18px;*/
   font-weight: 800;
   color: #C86A7A;
 }
